# TriSeek

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Cargo.toml  README.draft.md  README.md  Triseek_Memo_Spec_Handoff.md  codex_search_handoff_plan.md
.claude/: settings.json
.claude/commands/: triseek.md
.github/workflows/: ci.yml  publish-docs.yml  release.yml
.goal-gate/sessions/: 2026-04-14-scope-validation-spike.json  20260415-memo-phases-1-4.json
.playwright-cli/: page-2026-04-10T18-06-07-876Z.yml  page-2026-04-10T18-09-57-103Z.yml  page-2026-04-10T18-10-08-004Z.yml
bench/manifest/: repositories.yaml
bench/results/: README.md  prepared_repos.json  prepared_repos_full.json
context_pack_validation/: __init__.py  agent_smoke.py  fixtures.py  metrics.py  report.py  runner.py  scenarios.yaml
context_pack_validation/tests/: __init__.py  test_metrics.py  test_runner_integration.py  test_scenarios_and_reports.py
crates/search-bench/: Cargo.toml
crates/search-bench/src/: main.rs
crates/search-cli/: Cargo.toml
crates/search-cli/src/: brief.rs  build_output.rs  context_pack.rs  handoff.rs  hydration_writer.rs  main.rs  memo_shim.rs  output_format.rs  pack.rs  rg.rs  search_runner.rs
crates/search-cli/src/install/: claude_code.rs  codex.rs  doctor.rs  mod.rs  opencode.rs  pi.rs  shared.rs
crates/search-cli/src/mcp/: errors.rs  mod.rs  query_cache.rs  repo_root.rs  schema.rs  search_memo.rs  server.rs  tools.rs
crates/search-cli/tests/: mcp_server.rs
crates/search-core/: Cargo.toml
crates/search-frecency/: Cargo.toml
crates/search-index/: Cargo.toml
crates/search-index/src/: build.rs  engine.rs  error.rs  fastindex.rs  lib.rs  model.rs  storage.rs  walker.rs  watcher.rs
crates/search-index/tests/: integration.rs
crates/search-server/: Cargo.toml
crates/search-server/src/: git_state.rs  hydrate.rs  main.rs  memo.rs  session_state.rs  snapshot.rs
docker/: real-harness.Dockerfile
docs/: benchmark-summary.md  briefing.html  codex-memo-skill.md  context-handoff.html  context-pack.html  context-portability.html  decision-memo.md  index.html  install.html  install.md  mcp-regression-checklist.md  mcp.html  mcp.md  memo-installer-verification.md  memo.html  optimization-log.md  pack-format.html  regression-test-plan.md  sessions.html  triseek-architecture.html  triseek-explained.html  vision.html
docs/_includes/: portability-animation.html
docs/demo/: README.md  handoff-demo.md
docs/releases/: v0.1.0.md  v0.2.0.md  v0.2.1.md  v0.3.0-checklist.md  v0.3.0.md  v0.3.1-checklist.md  v0.3.1.md  v0.3.2.md  v0.3.3.md  v0.4.0.md  v0.4.1.md  v0.4.2.md
memo_spike_v2/: README.md  __init__.py  study.py
memo_spike_v2/tests/: test_memo_spike_v2.py
memo_spike_v3/: README.md  __init__.py  study.py
memo_validation/: isolation_test.py  mcp_client.py  replay.py  rpc_client.py  search_reuse_replay.py  search_reuse_study.py  study.py
memo_validation/tests/: test_replay.py  test_search_reuse_replay.py
scope_spike/: .gitignore  README.md  __init__.py  analyze.py  capture.py  models.py  oracle.py  report.py  spike_runner.py  study.py  study_manifest.json  summary.md  tokenizer.py
scope_spike/tests/: test_spike.py
scope_spike_v2/: README.md  __init__.py  evaluate.py
scope_spike_v2/tests/: test_scope_spike_v2.py
scope_spike_v3/: README.md  __init__.py  capture_study.py  evaluate.py  study_manifest.json
scripts/: install.ps1  install.sh  real_harness.sh  release_smoke.sh  run_context_pack_agent_smoke.sh  run_context_pack_validation.sh  run_real_harness_docker.sh
scripts/demo/: client_session_panel.sh  drive_claude_tmux.py  drive_real_tui.py  linux-session-20-baseline.zsh  linux-session-20.json  live_benchmark_panel.sh  live_measure.sh  render_benchmark_replay_gifs.sh  render_claude_tmux_gif.sh  render_client_session_gifs.sh  render_live_benchmark_gifs.sh  render_real_tui_gifs.sh  replay_benchmark_panel.sh
(+290 files in other folders)
