[package]
name = "search-index"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
bincode.workspace = true
globset.workspace = true
ignore.workspace = true
memmap2.workspace = true
notify.workspace = true
num_cpus.workspace = true
rayon.workspace = true
regex.workspace = true
regex-syntax.workspace = true
serde.workspace = true
serde_json.workspace = true
search-core = { path = "../search-core" }
thiserror.workspace = true
time.workspace = true
xxhash-rust.workspace = true

[dev-dependencies]
tempfile.workspace = true
