[package]
name = "search-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "triseek-server"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
search-core = { path = "../search-core" }
search-frecency = { path = "../search-frecency" }
search-index = { path = "../search-index" }
libc.workspace = true
xxhash-rust.workspace = true

[dev-dependencies]
tempfile.workspace = true
